--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 build/
 
 # Local configuration file (sdk path, etc)
-local.properties
+NUMAD24FA_XiaolinLiu/local.properties
 
 # Log/OS Files
 *.log
