--- a/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
@@ -16,8 +16,12 @@
             android:name=".QuickCalcActivity"
             android:exported="false" />
         <activity
+            android:name=".AboutMeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
