contacts button, contacts.xml, contact sgl in cardview

--- a/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
             android:name=".AboutMeActivity"
             android:exported="false" />
         <activity
+            android:name=".ContactsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
 
