FAB and working contactActivity

--- a/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name=".AboutMeActivity"
             android:exported="false" />
         <activity
-            android:name=".ContactsActivity"
+            android:name=".ContactActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
